crates/servicepoint_binding_uniffi/libraries/ruby/lib/servicepoint_binding_uniffi.rb


  attach_function :uniffi_servicepoint_binding_uniffi_fn_free_bitvec,
    [:pointer, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_clone,
    [:pointer, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_load,
    [RustBuffer.by_value, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_new,
    [:uint64, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitvec_copy_raw,
    [:pointer, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitvec_equals,
    [:pointer, :pointer, RustCallStatus.by_ref],
    :int8
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitvec_fill,
    [:pointer, :int8, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitvec_get,
    [:pointer, :uint64, RustCallStatus.by_ref],
    :int8
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitvec_len,
    [:pointer, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitvec_set,
    [:pointer, :uint64, :int8, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_free_bitmap,
    [:pointer, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_clone,
    [:pointer, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_load,
    [:uint64, :uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_new,
    [:uint64, :uint64, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_new_max_sized,
    [RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitmap_copy_raw,
    [:pointer, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitmap_equals,
    [:pointer, :pointer, RustCallStatus.by_ref],
    :int8
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitmap_fill,
    [:pointer, :int8, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitmap_get,
    [:pointer, :uint64, :uint64, RustCallStatus.by_ref],
    :int8
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitmap_height,
    [:pointer, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitmap_set,
    [:pointer, :uint64, :uint64, :int8, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_bitmap_width,
    [:pointer, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_servicepoint_binding_uniffi_fn_free_brightnessgrid,
    [:pointer, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_clone,
    [:pointer, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_load,
    [:uint64, :uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_new,
    [:uint64, :uint64, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_copy_raw,
    [:pointer, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_equals,
    [:pointer, :pointer, RustCallStatus.by_ref],
    :int8
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_fill,
    [:pointer, :uint8, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_get,
    [:pointer, :uint64, :uint64, RustCallStatus.by_ref],
    :uint8
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_height,
    [:pointer, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_set,
    [:pointer, :uint64, :uint64, :uint8, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_width,
    [:pointer, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_servicepoint_binding_uniffi_fn_free_chargrid,
    [:pointer, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_clone,
    [:pointer, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_load,
    [RustBuffer.by_value, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_chargrid_new,
    [:uint64, :uint64, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_as_string,
    [:pointer, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_equals,
    [:pointer, :pointer, RustCallStatus.by_ref],
    :int8
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_fill,
    [:pointer, RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_get,
    [:pointer, :uint64, :uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_get_col,
    [:pointer, :uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_get_row,
    [:pointer, :uint64, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_height,
    [:pointer, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_set,
    [:pointer, :uint64, :uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_set_col,
    [:pointer, :uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_set_row,
    [:pointer, :uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_to_cp437,
    [:pointer, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_chargrid_width,
    [:pointer, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_servicepoint_binding_uniffi_fn_free_command,
    [:pointer, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear,
    [:uint64, :pointer, RustBuffer.by_value, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_and,
    [:uint64, :pointer, RustBuffer.by_value, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_or,
    [:uint64, :pointer, RustBuffer.by_value, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_win,
    [:uint64, :uint64, :pointer, RustBuffer.by_value, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_bitmap_linear_xor,
    [:uint64, :pointer, RustBuffer.by_value, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_brightness,
    [:uint8, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_char_brightness,
    [:uint64, :uint64, :pointer, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_clear,
    [RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_clone,
    [:pointer, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_cp437_data,
    [:uint64, :uint64, :pointer, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_fade_out,
    [RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_hard_reset,
    [RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_command_utf8_data,
    [:uint64, :uint64, :pointer, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_command_equals,
    [:pointer, :pointer, RustCallStatus.by_ref],
    :int8
  attach_function :uniffi_servicepoint_binding_uniffi_fn_free_connection,
    [:pointer, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new,
    [RustBuffer.by_value, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_connection_new_fake,
    [RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_connection_send,
    [:pointer, :pointer, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_free_cp437grid,
    [:pointer, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_clone,
    [:pointer, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_load,
    [:uint64, :uint64, RustBuffer.by_value, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_constructor_cp437grid_new,
    [:uint64, :uint64, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_copy_raw,
    [:pointer, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_equals,
    [:pointer, :pointer, RustCallStatus.by_ref],
    :int8
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_fill,
    [:pointer, :uint8, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_get,
    [:pointer, :uint64, :uint64, RustCallStatus.by_ref],
    :uint8
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_height,
    [:pointer, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_set,
    [:pointer, :uint64, :uint64, :uint8, RustCallStatus.by_ref],
    :void
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_to_utf8,
    [:pointer, RustCallStatus.by_ref],
    :pointer
  attach_function :uniffi_servicepoint_binding_uniffi_fn_method_cp437grid_width,
    [:pointer, RustCallStatus.by_ref],
    :uint64
  attach_function :uniffi_servicepoint_binding_uniffi_fn_func_get_constants,
    [RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :ffi_servicepoint_binding_uniffi_rustbuffer_alloc,
    [:int32, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :ffi_servicepoint_binding_uniffi_rustbuffer_from_bytes,
    [ForeignBytes, RustCallStatus.by_ref],
    RustBuffer.by_value
  attach_function :ffi_servicepoint_binding_uniffi_rustbuffer_free,
